force-app/main/default/objects/Investigation__c/Investigation__c.object-meta.xml
<CustomObject>
    <label>Investigation</label>
    <nameField>
        <displayFormat>INV-{00000}</displayFormat>
        <label>Investigation ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Investigation</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>