force-app/main/default/objects/Investigation__c/fields/Corrected__c.field-meta.xml
<CustomField>
    <fullName>Corrected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Corrected In ULS</label>
    <type>Checkbox</type>
</CustomField>