force-app/main/default/objects/Investigation__c/fields/Corrected_In_Borg__c.field-meta.xml
<CustomField>
    <fullName>Corrected_In_Borg__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Corrected In Borg</label>
    <type>Checkbox</type>
</CustomField>