force-app/main/default/objects/Investigation__c/fields/Investigation_Categories__c.field-meta.xml
<CustomField>
    <fullName>Investigation_Categories__c</fullName>
    <label>Investigation Categories</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Partition Lease/Sub-Lease</fullName>
            </value>
            <value>
                <fullName>Disaggregated Lease/Sub-Lease</fullName>
            </value>
            <value>
                <fullName>ULS Doc Insufficient</fullName>
            </value>
            <value>
                <fullName>New Lease</fullName>
            </value>
            <value>
                <fullName>Lease Out Early Term</fullName>
            </value>
            <value>
                <fullName>Super Cut/Placeholder</fullName>
            </value>
            <value>
                <fullName>Missing Rights</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>