force-app/main/default/objects/Investigation__c/fields/License_Header__c.field-meta.xml
<CustomField>
    <fullName>License_Header__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>License Header</label>
    <referenceTo>pubacc_hd__c</referenceTo>
    <relationshipLabel>Investigation</relationshipLabel>
    <relationshipName>Investigation</relationshipName>
    <type>Lookup</type>
</CustomField>