force-app/main/default/objects/Investigation__c/fields/Link_to_One_Drive__c.field-meta.xml
<CustomField>
    <fullName>Link_to_One_Drive__c</fullName>
    <formula>HYPERLINK(&quot;https://tmobileusa-my.sharepoint.com/:x:/r/personal/ilona_lindsay_t-mobile_com/_layouts/15/[…]EB.MAIN.OTHER&amp;cid=eedfe9d1-daff-47b4-b4d2-c3f7cec380a0&quot;,&quot;Link to One Drive&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Link to One Drive</label>
    <type>Text</type>
</CustomField>