force-app/main/default/objects/Investigation__c/fields/Link_to_ULS__c.field-meta.xml
<CustomField>
    <fullName>Link_to_ULS__c</fullName>
    <formula>HYPERLINK(&quot;https://wireless2.fcc.gov/UlsApp/UlsSearch/leaseMain.jsp?licKey=&quot;&amp; License_Header__r.Unique_System_Identifier__c,&quot;Link to the ULS&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Link to ULS</label>
    <type>Text</type>
</CustomField>