force-app/main/default/objects/Investigation__c/fields/Placeholder_long_Comment__c.field-meta.xml
<CustomField>
    <fullName>Placeholder_long_Comment__c</fullName>
    <label>Placeholder long Comment</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>