force-app/main/default/objects/Investigation__c/fields/Spectrum_Market_Area_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Spectrum_Market_Area_Frequency__c</fullName>
    <label>Spectrum &amp; Market Area Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1.0</fullName>
            </value>
            <value>
                <fullName>2.0</fullName>
            </value>
            <value>
                <fullName>3.0</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>