force-app/main/default/objects/Investigation__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Investigating</fullName>
            </value>
            <value>
                <fullName>Sent to Legal</fullName>
            </value>
            <value>
                <fullName>Legal Review</fullName>
            </value>
            <value>
                <fullName>RF Review</fullName>
            </value>
            <value>
                <fullName>Pending FCC</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Corrected in ULS</fullName>
                <isActive>false</isActive>
                <label>Corrected in ULS</label>
            </value>
            <value>
                <fullName>Marked for Correction</fullName>
                <isActive>false</isActive>
                <label>Marked for Correction</label>
            </value>
            <value>
                <fullName>Test Exclusion</fullName>
                <isActive>false</isActive>
                <label>Test Exclusion</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>