force-app/main/default/objects/Investigation__c/fields/System_Indicated_Passed__c.field-meta.xml
<CustomField>
    <fullName>System_Indicated_Passed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>System Indicated Passed?</label>
    <type>Checkbox</type>
</CustomField>