force-app/main/default/objects/Investigation__c/fields/System_Indicated_passed_Date__c.field-meta.xml
<CustomField>
    <fullName>System_Indicated_passed_Date__c</fullName>
    <label>System Indicated passed Date</label>
    <type>Date</type>
</CustomField>