force-app/main/default/objects/Investigation__c/fields/Test_Result_del__c.field-meta.xml
<CustomField>
    <fullName>Test_Result_del__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Test Result</label>
    <referenceTo>Test_Results__c</referenceTo>
    <relationshipLabel>Investigation</relationshipLabel>
    <relationshipName>Investigation_del</relationshipName>
    <type>Lookup</type>
</CustomField>