force-app/main/default/objects/Investigation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Stage__c</columns>
    <columns>License_Header__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_ACTIVITY</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Investigation_Categories__c</columns>
    <columns>Enter_Long_Comments_here__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>